--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,52 @@
 
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+
+    <string name="settings">Settings</string>
+    <string name="term_base">Term base</string>
+    <string name="help">Help</string>
+    <string name="about">About LinguaSyne</string>
+    <string name="share">Share LinguaSyne with a friend!</string>
+    <string name="sign_out">Sign out</string>
+    <string name="lessons">Lessons</string>
+    <string name="vocab">Vocab</string>
+    <string name="verbs">Verbs</string>
+    <string name="phrases">Phrases</string>
+    <string name="level">Level</string>
+    <string name="revision">Revision</string>
+    <string name="to_revise">To revise</string>
+    <string name="exam">Exam</string>
+    <string name="day_streak">-day streak!</string>
+    <string name="today_in">Today\'s news in</string>
+    <string name="country_name">France</string>
+    <string name="password_strength">Password strength</string>
+    <string name="email_address">Email address</string>
+    <string name="password">Password</string>
+    <string name="create_account">Create account</string>
+    <string name="return_to_login">Return to login</string>
+    <string name="camera_error_toast">Error launching camera</string>
+    <string name="translations">Translations</string>
+    <string name="mnemonics">Mnemonics</string>
+    <string name="your_progress">Your progress</string>
+    <string name="next_review">Next review</string>
+    <string name="log_in">Log in</string>
+    <string name="create_account_prompt">No account? Tap here to register</string>
+    <string name="enter_translation">Enter translation</string>
+    <string name="select_gender">Select gender</string>
+    <string name="submit">Submit</string>
+    <string name="summary">Summary</string>
+    <string name="total_correct">Total correct</string>
+    <string name="total_incorrect">Total incorrect</string>
+    <string name="continue_string">Continue</string>
+    <string name="unlock_level">Unlock level</string>
+    <string name="current_level">Current level</string>
+    <string name="password_strength_spaces">Password cannot contain spaces!</string>
+    <string name="password_strength_very_weak">Very weak</string>
+    <string name="password_strength_weak">Weak</string>
+    <string name="password_strength_average">Average</string>
+    <string name="password_strength_strong">Strong</string>
+    <string name="password_strength_very_strong">Very strong!</string>
+    <string name="password_strength_short">Too short</string>
+
+
 </resources>
