Various fixes, plus animations added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,17 +26,16 @@
     <string name="revision">Revision</string>
     <string name="to_revise">To revise</string>
     <string name="exam">Exam</string>
-    <string name="day_streak">-day streak!</string>
-    <string name="today_in">Today\'s news in</string>
-    <string name="country_name">France</string>
-    <string name="password_strength">Password strength</string>
+    <string name="day_streak">%1$d-day streak!</string>
+    <string name="today_in">Today\'s news in %1$s</string>
+    <string name="password_strength">Password strength:</string>
     <string name="email_address">Email address</string>
     <string name="password">Password</string>
     <string name="create_account">Create account</string>
     <string name="return_to_login">Return to login</string>
     <string name="camera_error_toast">Error launching camera</string>
-    <string name="translations">Translations</string>
-    <string name="mnemonics">Mnemonics</string>
+    <string name="translations">Translations:</string>
+    <string name="mnemonics">Mnemonics:</string>
     <string name="your_progress">Your progress</string>
     <string name="next_review">Next review</string>
     <string name="log_in">Log in</string>
@@ -45,11 +44,11 @@
     <string name="select_gender">Select gender</string>
     <string name="submit">Submit</string>
     <string name="summary">Summary</string>
-    <string name="total_correct">Total correct</string>
-    <string name="total_incorrect">Total incorrect</string>
+    <string name="total_correct">Total correct:</string>
+    <string name="total_incorrect">Total incorrect:</string>
     <string name="continue_string">Continue</string>
-    <string name="unlock_level">Unlock level</string>
-    <string name="current_level">Current level</string>
+    <string name="unlock_level">Unlock level:</string>
+    <string name="current_level">Current level:</string>
     <string name="password_strength_spaces">Password cannot contain spaces!</string>
     <string name="password_strength_very_weak">Very weak</string>
     <string name="password_strength_weak">Weak</string>
