--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -56,6 +56,8 @@
     <string name="password_strength_strong">Strong</string>
     <string name="password_strength_very_strong">Very strong!</string>
     <string name="password_strength_short">Too short</string>
+    <string name="add_translation">Add custom translation</string>
+    <string name="add_mnemonic">Add custom mnemonic</string>
 
 
 </resources>
