Visual changes to home screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -59,6 +59,7 @@
     <string name="password_strength_short">Too short</string>
     <string name="add_translation">+ Add custom translation</string>
     <string name="add_mnemonic">+ Add custom mnemonic</string>
+    <string name="end_session">End current session</string>
 
 
 </resources>
