Visual improvements across various screens.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -60,6 +60,8 @@
     <string name="add_translation">+ Add custom translation</string>
     <string name="add_mnemonic">+ Add custom mnemonic</string>
     <string name="end_session">End current session</string>
+    <string name="unlocked">Unlocked</string>
+    <string name="memorised">Memorised</string>
 
 
 </resources>
