--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,7 @@
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
 
+    <string name="linguasyne">LinguaSyne</string>
     <string name="settings">Settings</string>
     <string name="term_base">Term base</string>
     <string name="help">Help</string>
@@ -37,9 +38,9 @@
     <string name="translations">Translations:</string>
     <string name="mnemonics">Mnemonics:</string>
     <string name="your_progress">Your progress</string>
-    <string name="next_review">Next review</string>
+    <string name="next_review">Next review:</string>
     <string name="log_in">Log in</string>
-    <string name="create_account_prompt">No account? Tap here to register</string>
+    <string name="create_account_prompt">Create account</string>
     <string name="enter_translation">Enter translation</string>
     <string name="enter_mnemonic">Enter mnemonic</string>
     <string name="select_gender">Select gender</string>
@@ -55,8 +56,8 @@
     <string name="password_strength_weak">Weak</string>
     <string name="password_strength_average">Average</string>
     <string name="password_strength_strong">Strong</string>
-    <string name="password_strength_very_strong">Very strong!</string>
-    <string name="password_strength_short">Too short</string>
+    <string name="password_strength_very_strong">Very strong! &#128170; </string>
+    <string name="password_strength_short">Too short </string>
     <string name="add_translation">+ Add custom translation</string>
     <string name="add_mnemonic">+ Add custom mnemonic</string>
     <string name="end_session">End current session</string>
