--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,15 +2,6 @@
     <string name="app_name">LinguaSyne</string>
     <string name="search_hint">look up a term</string>
     <string name="app_label">LinguaSyne</string>
-    <string name="title_activity_lesson">LessonActivity</string>
-    <!-- Strings used for fragments for navigation -->
-    <string name="first_fragment_label">First Fragment</string>
-    <string name="second_fragment_label">Second Fragment</string>
-    <string name="next">Next</string>
-    <string name="previous">Previous</string>
-
-    <string name="hello_first_fragment">Hello first fragment</string>
-    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
 
     <string name="linguasyne">LinguaSyne</string>
     <string name="settings">Settings</string>
@@ -19,6 +10,7 @@
     <string name="about">About LinguaSyne</string>
     <string name="share">Share LinguaSyne with a friend!</string>
     <string name="sign_out">Sign out</string>
+    <string name="lesson">Lesson</string>
     <string name="lessons">Lessons</string>
     <string name="vocab">Vocab</string>
     <string name="verbs">Verbs</string>
