--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,6 +55,5 @@
     <string name="end_session">End current session</string>
     <string name="unlocked">Unlocked</string>
     <string name="memorised">Memorised</string>
-
-
+    <string name="end_session_warning_prompt">Are you sure you would like to end the session?</string>
 </resources>
